[LFC][Out-of-flow] Ignore bottom when the vertical values are over-constrained https://bugs.webkit.org/show_bug.cgi?id=193448

Reviewed by Antti Koivisto.

Source/WebCore:

Add missing check. We should only resolve auto values.

Test: fast/block/block-only/non-auto-top-bottom-left-right-widht-height-out-of-flow.html

* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::FormattingContext::Geometry::outOfFlowNonReplacedVerticalGeometry):

Tools:

* LayoutReloaded/misc/LFC-passing-tests.txt:

LayoutTests:

* fast/block/block-only/non-auto-top-bottom-left-right-widht-height-out-of-flow-expected.txt: Added.
* fast/block/block-only/non-auto-top-bottom-left-right-widht-height-out-of-flow.html: Added.


Canonical link: https://commits.webkit.org/207960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239991 268f45cc-cd09-0410-ab3c-d52691b4dbfc